[gd_scene load_steps=4 format=3 uid="uid://dkmxba4m116al"]

[ext_resource type="Script" path="res://scenes/settings.gd" id="1_wd6el"]
[ext_resource type="PackedScene" uid="uid://cu4cofpmrgkf6" path="res://scenes/int_field/int_field.tscn" id="2_4twfi"]
[ext_resource type="PackedScene" uid="uid://c2hue7smsng4d" path="res://scenes/message_label.tscn" id="3_kp2sy"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wd6el")
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 10
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="WorkCounter" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_4twfi")]
unique_name_in_owner = true
layout_mode = 2
label = "Work Counter:"
max_value = 4
default_value = 2
help = "How many times the work timer is set before going to the break timer."

[node name="NotifTimer" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_4twfi")]
unique_name_in_owner = true
layout_mode = 2
label = "Notification Timer:"
max_value = 300
default_value = 10
help = "Number of seconds to display the timeout notification."

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Save" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save"

[node name="Reset" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reset"

[node name="SettingsStatus" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_kp2sy")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Reset" to="." method="_on_reset_pressed"]
